--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules
-/dist
+# /dist
 
 
 # local env files
@@ -14,6 +14,7 @@ yarn-error.log*
 pnpm-debug.log*
 
 # Editor directories and files
+# .vscode
 .idea
 *.suo
 *.ntvs*
