--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.3.1",
+    "tailwindcss-typography": "^3.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
